components/rekor/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sigstore
spec:
  finalizers:
  - kubernetes
