components/rekor/rekor-server-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rekor-server-route
  namespace: sigstore
spec:
  port:
    targetPort: 3000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rekor-application-server
    weight: 100
